--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.1",
+    "katex": "^0.16.11",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
     "react": "^18",
@@ -27,6 +28,7 @@
     "three": "^0.168.0"
   },
   "devDependencies": {
+    "@types/katex": "^0.16.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
